<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_app">
        <ListPreference
            android:title="@string/category_app"
            android:key="control"
            android:summary="@string/text_control"
            android:defaultValue="@string/list_control_joystick"
            android:entries="@array/control"
            android:entryValues="@array/controlValue">
            </ListPreference>

        <ListPreference
            android:title="@string/list_language"
            android:summary="@string/text_language"
            android:key="lang"
            android:defaultValue="@string/def"
            android:entries="@array/lang"
            android:entryValues="@array/langValue">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_sensor">
        <CheckBoxPreference
            android:key="battery"
            android:defaultValue="false"
            android:title="@string/title_battery"
            android:summary="@string/text_battery">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="temp"
            android:defaultValue="false"
            android:title="@string/title_temp"
            android:summary="@string/text_temp">
        </CheckBoxPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_bluetooth">
        <CheckBoxPreference
            android:key="bluetooth"
            android:defaultValue="false"
            android:title="@string/title_address"
            android:summary="@string/text_address">
            </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>