<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.blackwhell.app.StartActivity">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_button_on"
        android:id="@+id/BluetoothButton"
        android:layout_marginTop="135dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_app"
        android:id="@+id/SettingButton"
        android:layout_below="@+id/BluetoothButton"
        android:layout_alignLeft="@+id/BluetoothButton"
        android:layout_alignStart="@+id/BluetoothButton"
        android:layout_marginTop="27dp"
        android:layout_alignRight="@+id/BluetoothButton"
        android:layout_alignEnd="@+id/BluetoothButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_app"
        android:id="@+id/ExitButton"
        android:layout_below="@+id/SettingButton"
        android:layout_alignLeft="@+id/SettingButton"
        android:layout_alignStart="@+id/SettingButton"
        android:layout_marginTop="27dp"
        android:layout_alignRight="@+id/SettingButton"
        android:layout_alignEnd="@+id/SettingButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/ConnectButton"
        android:layout_below="@+id/ExitButton"
        android:layout_alignLeft="@+id/ExitButton"
        android:layout_alignStart="@+id/ExitButton"
        android:layout_marginTop="27dp"
        android:layout_alignRight="@+id/ExitButton"
        android:layout_alignEnd="@+id/ExitButton" />
</RelativeLayout>
